--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="divClass">
+    <div id="firstDiv">
         <h1>[Diego]</h1>
          <h3>Henry</h3>
-         <h4>tarea de HTML / CSS</h3>
+         <h4>Tarea de HTML / CSS</h3>
         <div class="divClass">
             <span id="spanID">Pizza</span>
             <a href="https://www.google.com/search?q=pizza&rlz=1C1UEAD_esAR993AR993&sxsrf=ALiCzsbE1fzevGg7pRpaWpZJJqAB4ePNvw:1656985662499&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjmlL7O0OD4AhVYlJUCHSO5B1EQ_AUoAnoECAIQBA&biw=1920&bih=969&dpr=1#imgrc=OHCj3BQ07nlg4M">Restaurante de pizza</a>
